--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
 			<artifactId>auto-service</artifactId>
 			<version>1.0-rc1</version>
 		</dependency>
-		  <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> 
+		<dependency>
+			<groupId>com.sun</groupId>
+			<artifactId>tools</artifactId>
 			<version>1.8</version>
-			<scope>system</scope> 
-			<systemPath>${java.home}/../lib/tools.jar</systemPath> 
+			<scope>system</scope>
+			<systemPath>${java.home}/../lib/tools.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -22,6 +24,26 @@
 			<version>4.12</version>
 		</dependency>
 	</dependencies>
+	<!-- <licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<tag>master</tag>
+		<url>git@gitee.com:snowheart/dingtalk-robot.git</url>
+		<connection>scm:git:git@gitee.com:snowheart/dingtalk-robot.git</connection>
+		<developerConnection>scm:git:git@gitee.com:snowheart/dingtalk-robot.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>zhangjian</name>
+			<email>zj007ok@sina.com</email>
+			<organization>my-gourd</organization>
+		</developer>
+	</developers> -->
 	<build>
 		<plugins>
 			<plugin>
